syntax = "proto3";

package flowcraft_proto.v1;

import "plugins/media/markdown.proto";
import "plugins/widgets/select.proto";

message WidgetSignal {
  string node_id = 1;
  string widget_id = 2;
  
  oneof payload {
    MarkdownStream markdown_stream = 3;
    SelectQuery select_query = 4;
    SelectResult select_result = 5;
  }
}
